tests/invalidTest/other/neg_zero.q
# EXPECT neg zero is invalid 
def void errorDef(){
    sint8 a = -0
}